2015-08-01  Carlos O'Donell  <carlos@redhat.com>

	* po/pl.po: Updated translation.
	* po/uk.po: Likewise.
	* po/fi.po: Likewise.
	* po/ko.po: Likewise.
	* po/ru.po: Likewise.
	* po/vi.po: Likewise.

2015-07-31  Zack Weinberg  <zackw@panix.com>

	[BZ #18681]
	* regexp.h: Add unconditional #warning stating that this header
	will be removed soon.  Revise banner comment to match.
	(compile): Consistently use ERROR instead of RETURN to report
	errors (partial fix for bz#18681).
	* regexp.c: Don't include regexp.h. Remove some unnecessary
	declarations.

2015-07-31  Carlos O'Donell  <carlos@redhat.com>

	* po/libc.pot: Regenerated.

2015-07-30  Andrew Senkevich  <andrew.senkevich@intel.com>

	[BZ #18740]
	* sysdeps/x86_64/fpu/Makefile (double-vlen2-arch-ext-cflags,
	float-vlen4-arch-ext-cflags): Removed.
	* math/Makefile (CFLAGS-test-double-vlen2-wrappers.c,
	CFLAGS-test-float-vlen4-wrappers.c): Likewise.

2015-07-30  Mike Frysinger  <vapier@gentoo.org>

	[BZ #14113]
	* sysdeps/hppa/nptl/bits/pthreadtypes.h (pthread_mutex_t): Change
	aligned to __aligned__.
	(pthread_cond_t, pthread_rwlock_t): Likewise.

2015-07-30  Torvald Riegel  <triegel@redhat.com>

	* sysdeps/unix/sysv/linux/hppa/lowlevellock.h: Remove file.

2015-07-30  Mike Frysinger  <vapier@gentoo.org>

	* sysdeps/unix/sysv/linux/hppa/bits/sigaction.h: Include bits/wordsize.h.
	(struct sigaction): Change sa_flags from a long to an int, and add
	__glibc_reserved0 before it for padding when __WORDSIZE is 64.

2015-07-30  Mike Frysinger  <vapier@gentoo.org>

	* hppa/sysdep.h: Delete sys/syscall.h and config.h includes.
	* sysdeps/unix/sysv/linux/hppa/sysdep-cancel.h: Delete
	sysdeps/generic/sysdep.h include.
	* sysdeps/unix/sysv/linux/hppa/sysdep.h: Wrap the whole file in
	_LINUX_HPPA_SYSDEP_H defines.  Include sysdeps/unix/sysdep.h and
	sysdeps/hppa/sysdep.h.
	(ENTRY, PSEUDO): Undefine before defining.

2015-07-30  Mike Frysinger  <vapier@gentoo.org>
